--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/native": "^7.1.6",
     "convex": "^1.25.0",
     "convex-helpers": "^0.1.95",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-secure-store": "^14.2.3",
@@ -42,9 +45,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "svix": "^1.68.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.11"
+    "svix": "^1.68.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
